Use java 9 collection factory methods.