@@ -22,7 +22,6 @@ package xyz.ottr.lutra.wottr.vocabulary.v03;
  * #L%
  */
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -84,13 +83,10 @@ public class WOTTR implements WOTTRVocabulary {
         dataPropertyVariable,
         annotationPropertyVariable);
 
-    public static final Map<Property, List<Property>> listPropertiesMap;
-   
-    static {
-        listPropertiesMap = Map.of(
-            withVariables, Arrays.asList(hasParameter, variable),
-            withValues, Arrays.asList(hasArgument, value));
-    }
+    public static final Map<Property, List<Property>> listPropertiesMap =
+        Map.of(
+            withVariables, List.of(hasParameter, variable),
+            withValues, List.of(hasArgument, value));
     
     private static Resource getResource(String uri) {
         return ResourceFactory.createResource(uri);
